@@ -1,25 +1,0 @@
-.DS_Store
-.bzr
-.bzrignore
-.project
-.pydevproject
-.settings
-.tox
-CHANGELOG
-COPYING
-Changelog.GNU
-README
-README-LOG
-README-REPO
-README-TESTING
-bin
-build
-debian
-dist
-docs
-duplicity
-duplicity.egg-info
-po
-setup.py
-testing
-tox.ini
