@@ -5,6 +5,7 @@
         on docker. It contains a Dockerfile for a simple ftp server (used for
         backend testing) and a setup script that can be used to set up the
         complete test environment.
+    * Moved Dockerfile for duplicitytest into testinfrastructure/duplicity_test
 
 2017-05-05  Kenneth Loafman  <kenneth@loafman.com>
 
