@@ -166,6 +166,7 @@ New in v0.8.00 (2016/07/??)
     on docker. It contains a Dockerfile for a simple ftp server (used for
     backend testing) and a setup script that can be used to set up the
     complete test environment.
+* Moved Dockerfile for duplicitytest into testinfrastructure/duplicity_test
 
 
 New in v0.7.08 (2016/07/02)
